fix: update height property in header for correct viewport handling and add padding to main heading for better spacing

--- a/hero.css
+++ b/hero.css
@@ -1,7 +1,7 @@
 header {
   position: relative;
   min-height: 100lvh;
-  height:100dvh;
+  height:100svh;
   width: 100dvw;
   background-color: var(--primary-bg);
   box-shadow: var(--shadow-main);
